--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -695,22 +695,22 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   $g = 10$} &
   $\begin{aligned}
     \using \mathbf{v} &= \begin{cases}
-      \se(p) &\when \registers_9 = 0 \\
-      \mathbf{o} &\when \registers_9 = 1 \\
-      p_\mathbf{w}[\registers_{10}]_\mathbf{y} &\when \registers_9 = 2 \wedge \registers_{10} < |p_\mathbf{w}| \\
-      \mathbf{x} &\when \registers_9 = 3 \wedge \registers_{10} < |p_\mathbf{w}| \wedge \registers_{11} < |p_\mathbf{w}[\registers_{10}]_\mathbf{x}| \wedge (\mathcal{H}(\mathbf{x}), |\mathbf{x}|) = p_\mathbf{w}[\registers_{10}]_\mathbf{x}[\registers_{11}] \\
-      \mathbf{x} &\when \registers_9 = 4 \wedge \registers_{10} < |p_\mathbf{w}[i]_\mathbf{x}| \wedge (\mathcal{H}(\mathbf{x}), |\mathbf{x}|) = p_\mathbf{w}[i]_\mathbf{x}[\registers_{10}] \\[2pt]
+      \se(p) &\when \registers_{10} = 0 \\
+      \mathbf{o} &\when \registers_{10} = 1 \\
+      p_\mathbf{w}[\registers_{11}]_\mathbf{y} &\when \registers_{10} = 2 \wedge \registers_{11} < |p_\mathbf{w}| \\
+      \mathbf{x} &\when \registers_{10} = 3 \wedge \registers_{11} < |p_\mathbf{w}| \wedge \registers_{12} < |p_\mathbf{w}[\registers_{11}]_\mathbf{x}| \wedge (\mathcal{H}(\mathbf{x}), |\mathbf{x}|) = p_\mathbf{w}[\registers_{11}]_\mathbf{x}[\registers_{12}] \\
+      \mathbf{x} &\when \registers_{10} = 4 \wedge \registers_{11} < |p_\mathbf{w}[i]_\mathbf{x}| \wedge (\mathcal{H}(\mathbf{x}), |\mathbf{x}|) = p_\mathbf{w}[i]_\mathbf{x}[\registers_{11}] \\[2pt]
       \mathbf{x} &\when \left\{\begin{aligned}
-        \registers_9 = 5 &\wedge \exists j, k : (\mathcal{H}(\mathbf{x}), |\mathbf{x}|) = p_\mathbf{w}[j]_\mathbf{x}[k] \\[2pt]
-        &\wedge \mathbb{Z}_{\registers_{10} \dots+ 32} \subset \mathbb{V}_{\memory} \wedge \memory_{\registers_{10}\dots+32} = \mathcal{H}(\mathbf{x}) \\
+        \registers_{10} = 5 &\wedge \exists j, k : (\mathcal{H}(\mathbf{x}), |\mathbf{x}|) = p_\mathbf{w}[j]_\mathbf{x}[k] \\[2pt]
+        &\wedge \mathbb{Z}_{\registers_{11} \dots+ 32} \subset \mathbb{V}_{\memory} \wedge \memory_{\registers_{11}\dots+32} = \mathcal{H}(\mathbf{x}) \\
       \end{aligned}\right.\\
-      \overline{\mathbf{i}}[\registers_{10}]_{\registers_{11}} &\when \registers_9 = 6 \wedge \registers_{10} < |\overline{\mathbf{i}}| \wedge \registers_{11} < |\overline{\mathbf{i}}[\registers_{10}]| \\
-      \overline{\mathbf{i}}[i]_{\registers_{10}} &\when \registers_9 = 7 \wedge \registers_{10} < |\overline{\mathbf{i}}[i]| \\
+      \overline{\mathbf{i}}[\registers_{11}]_{\registers_{12}} &\when \registers_{10} = 6 \wedge \registers_{11} < |\overline{\mathbf{i}}| \wedge \registers_{12} < |\overline{\mathbf{i}}[\registers_{11}]| \\
+      \overline{\mathbf{i}}[i]_{\registers_{11}} &\when \registers_{10} = 7 \wedge \registers_{11} < |\overline{\mathbf{i}}[i]| \\
       \none &\otherwise
     \end{cases} \\
     \using o &= \registers_7 \\
-    \using f &= \max(\registers_8 \div 2^{32}, |\mathbf{v}|) \\
-    \using l &= \min(\registers_8 \bmod 2^{32}, |\mathbf{v}| - f) \\
+    \using f &= \min(\registers_8, |\mathbf{v}|) \\
+    \using l &= \min(\registers_9, |\mathbf{v}| - f) \\
     \memory'_{o\dots+l} &\equiv \begin{cases}
       \mathbf{v}_{f\dots+l} & \when \mathbf{v} \ne \none \wedge \mathbb{N}_{o \dots+ l} \subset \mathbb{V}^*_{\memory} \\
       \memory_{o\dots+l} & \otherwise
@@ -718,7 +718,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
     \registers'_7 &\equiv \begin{cases}
       \mathtt{OOB} &\when \mathbb{N}_{o \dots+ l} \not\subset \mathbb{V}^*_{\memory}\ \vee\ (\registers_9 = 5 \wedge \mathbb{Z}_{\registers_{10} \dots+ 32} \not\subset \mathbb{V}_{\memory}) \\
       \mathtt{NONE} &\otherwhen \mathbf{v} = \none \\
-      \mathtt{OK} &\otherwise \\
+      |\mathbf{v}| &\otherwise \\
     \end{cases}
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
